# catkin_ws_moveit

./: ..gitignore.swp  .gitignore.save
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh  setup.sh
devel/.private/dofbot_moveit/: .catkin  setup.sh
devel/.private/moveit_package_1/: .catkin
devel/.private/moveit_package_2/: .catkin  local_setup.sh  setup.sh
devel/.private/my_robot_moveit/: .catkin  setup.sh
devel/lib/dofbot_moveit/: 01_random_move  02_motion_plan  03_attached_object
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  dofbot_moveit.pc  moveit_package_1.pc  moveit_package_2.pc  my_robot_moveit.pc
logs/dofbot_moveit/: build.check.001.log.stderr  build.check.003.log.stderr  build.check.004.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr
src/dofbot_moveit/: CMakeLists.txt
src/dofbot_moveit/include/dofbot_moveit/: dofbot_kinematics.h
src/dofbot_moveit/scripts/: move_dofbot.py
src/dofbot_moveit/src/: dofbot_kinematics_ik.cpp
src/dofbot_moveit/urdf/: dofbot1.urdf  human_sitting.urdf
src/moveit_package_1/: .setup_assistant  CMakeLists.txt
src/moveit_package_1/config/: dofbot.srdf  fake_controllers.yaml  gazebo_dofbot.urdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/moveit_package_1/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/moveit_package_2/: .setup_assistant  CMakeLists.txt
src/moveit_package_2/config/: dofbot.srdf  fake_controllers.yaml  gazebo_dofbot.urdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/moveit_package_2/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  (+9 more)
src/my_robot_moveit/: CMakeLists.txt
(+23 files in other folders)
